<resources>
    <string name="app_name">Company Profile</string>
    <string name="next">Selanjutnya</string>
    <string name="skip">Lewati</string>
    <string name="start">Mulai</string>
    <string name="slide_1_title">Profil</string>
    <string name="slide_1_desc">
        Informasi sejarah singkat Perum Peruri dari masa ke masa,
        susunan Direksi dan Dewan Pengawas, Visi dan Misi, Tata Nilai, dan lainnya.
    </string>
    <string name="slide_2_title">Produk</string>
    <string name="slide_2_desc">
        Informasi produk berkualitas tinggi kebanggaan bangsa Indonesia dari Perum Peruri;
        Uang, Logam Non-Uang, Kertas Berharga dan produk-produk digital security masa kini.
    </string>
    <string name="slide_3_title">Hubungan Investor</string>
    <string name="slide_3_desc">
        Informasi laporan tahunan dan laporan kondisi keuangan terkini Perum Peruri
    </string>
    <string name="slide_4_title">Bina Lingkungan</string>
    <string name="slide_4_desc">
        informasi tentang kegiatan Corporate Social Responsibility Perum Peruri
    </string>
    <string name="uang">Uang</string>
    <string name="alamat">
        Jl. Palatehan No. 4, Blok K-V, Kebayoran Baru, Jakarta 12160</string>
    <string name="alamat_karawang">
        Desa Parung Mulya, Kecamatan Ciampel, Karawang, Jawa Barat 41361</string>
    <string name="email">
        contact@peruri.co.id; info.digital@peruri.co.id</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="detail_code">
        Peruri Code merupakan kode unik yang diproduksi sistem Peruri pada label sekuriti, dokumen dan atau media lainnya untuk menyimpan informasi publik dan private di dalamnya. Peruri Code memiliki peranan penting untuk penjaminan keaslian (authentication), kontrol distribusi (supply chain) dan penjaga brand image (brand protection) guna mempertahankan dan meningkatkan kepuasan pelanggan terhadap suatu produk komersil. Penerapan Peruri Code dapat diimplementasikan ke beberapa jenis, antara lain:
    </string>
    <string name="deskripsi_secure2D">
        Secure 2D Code merupakan sebuah QR Code yang mengaplikasikan sistem pengamanan secara fisik dan data untuk mencegah pemalsuan produk. Karakteristik dari Secure 2D Code bersifat “anticopy”. Artinya resolusi dari QR Code nya tidak akan sama jika diduplikasi/dicopy sehingga sistem dapat mendeteksi bahwa QR Code tersebut telah dilakukan penggandaan. Selain itu, Secure 2D Code juga dapat berfungsi sebagai “data security”  untuk memberikan protection datanya sehingga hanya bisa diakses melalui aplikasi.
    </string>
    <string name="penerapan">Penerapan</string>
    <string name="detail_penerapan">
        <b><i>Fast Moving Consumer Goods,\n</i></b>
        <b><i>Agriculture,\n</i></b>
        <b><i>Manufacturing,\n</i></b>
        <b><i>Industri lainnya.</i></b>
    </string>
    <string name="manfaat">Manfaat</string>
    <string name="detail_manfaat">
        Mencegah pemalsuan produk,\n
        Meningkatkan kepuasan pelanggan,\n
        Mendapatkan data pendukung produk.
    </string>
    <string name="deskripsi_sqrc">
        SQRC merupakan QR Code yang berisi mengenai informasi suatu produk sebagai salah satu fitur untuk melakukan pengamanan keaslian produk atau barang. Fitur sekuriti SQRC menyimpan informasi public dan private sehingga dapat memberikan jaminan bahwa dokumen yang di enkripsi telah aman (secure) sejak pertama kali QR Code di-generate.
    </string>
    <string name="penerapan_sqrc">
        Multi Industri\n
        Banking dan Multi Finance\n
        Secure document (penjaminan online).
    </string>
    <string name="manfaat_sqrc">
        Mencegah adanya pemalsuan dokumen atau produk\n
        Kontrol terhadap distribusi produk (real time monitoring)
    </string>
    <string name="deskripsi_nano">
        Nano ID merupakan  teknologi keamanan fisik yang berisi data penggabungan antara nano teknologi, fotonik dan secure digital technology. Penerapan fitur sekuriti Nano ID dapat dibubuhkan (embedded) ke dalam material yang memiliki fitur keamanan tersembunyi dan tidak terlihat oleh kasat mata sehingga tidak akan dapat diduplikasi atau dimanipulasi.
    </string>
    <string name="penerapan_nano">
        Dokumen berharga atau bernilai uang,\n
        Card dan ID Card,\n
        Packaging.
    </string>
    <string name="manfaat_nano">
        Mencegah adanya perubahan, penduplikasian dan pemalsuan,\n
        Memastikan legitimasi dan integritas dokumen.
    </string>
    <string name="deskripsi_rfid">
        RFID merupakan teknologi pengumpulan data otomatis yang menggunakan gelombang frekuensi radio untuk mentransfer data antara reader dan tag yang memiliki jarak jangkauan yang beragam mulai dari 10 cm sampai dengan di atas 100 m.
    </string>
    <string name="penerapan_rfid">
        RFID mudah ditanam di berbagai media/objek dan device untuk membantu proses pelacakan (track and trace).
    </string>
    <string name="manfaat_rfid">
        Manajemen aset,\n
        Meningkatkan efisiensi proses supply chain,\n
        Memastikan kepatuhan proses kerja.
    </string>
    <string name="deskripsi_nfc">
        NFC merupakan sebuah teknologi berbasis wireless yang memungkinkan pengguna untuk melakukan pertukaran data secara cepat pada jarak yang dekat (peer to peer). NFC menggunakan gelombang radio untuk mengirim dan menerima data, bila antar perangkat yang memiliki NFC didekatkan maka perangkat tersebut dapat melakukan transaksi antar perangkat (dapat sebagai reader dan tag).
    </string>
    <string name="penerapan_nfc">
        Transfer data pada smartphone,\n
        Transaksi uang elektronik,\n
        Absensi dan e-ticketing.
    </string>
    <string name="manfaat_nfc">
        Mempermudah berbagai jenis transaksi data jarak dekat (contactless),\n
        Efisiensi waktu dan easy access ke berbagai platform digital yang dibutuhkan.
    </string>
    <string name="iot">Peruri Code memanfaatkan penggunaan teknologi IoT (Internet of Things).</string>
    <string name="peruri_trust">
        Peruri Trust merupakan platform untuk melakukan end-to-end monitoring dokumen sehingga dapat dipastikan dokumen tersebut tidak mengalami perubahan dan dijamin keabsahan serta keasliannya. Manfaat produk sekuriti Peruri Trust adalah mampu mengelola semua informasi dari suatu dokumen yang disimpan dan dikeluarkan hingga dokumen tersebut disahkan. Peruri Trust memiliki beberapa produk sekuriti, yaitu:
    </string>
    <string name="sertifikat_elektronik">
        Merupakan sertifikat bersifat elektronik yang memuat tanda tangan elektronik dan identitas yang menunjukkan status subjek hukum para pihak dalam transaksi elektronik yang dikeluarkan oleh penyelenggara sertifikasi elektronik sehingga dokumen elektronik yang ditransaksikan dapat diketahui keabsahan dan keasliannya. Fitur sekuriti ini memberikan jaminan akan kerahasiaan data atau informasi (confidentiality), melindungi integritas isi dokumen dan transaksi elektronik (data integrity), menjamin keaslian isi dokumen yang diverifikasi secara online kepada certification authority (authentication) dan memiliki jaminan nirsangkal (non-repudiation).
    </string>
    <string name="track_trace">
        Merupakan suatu sistem untuk label keamanan yang dikembangkan oleh Peruri untuk mengetahui kondisi secara real time atau history posisi untuk menjamin keaslian suatu produk atau property.
    </string>
    <string name="gov_solution">
        Peruri sebagai government services menyediakan solusi digital security untuk government dan public.
    </string>
    <string name="digilocker">
        Merupakan loker digital yang dapat menyimpan dan mengelola dokumen berharga dengan aman, mudah (dari sisi penggunaan dan akses), serta dapat diakses sesuai segmentasi pengguna (subscriber, issuer dan requester). Layanan Digital Locker meliputi penyimpanan, sharing dan verifikasi dokumen berharga yang efektif dan efisien.
    </string>
    <string name="penjaminan_online">
        Penjaminan Online merupakan platform untuk melayani proses pembuatan jaminan tertulis yang dikeluarkan oleh bank atau asuransi atas permintaan pemohon dan diberikan kepada penerima sebagai jaminan bahwa pemohon dapat menjalankan kewajibannya. Layanan ini menggunakan teknologi SQRC yang dibubuhkan pada dokumen perjanjian jaminan yang dikeluarkan oleh bank untuk memastikan bahwa dokumen tersebut asli dan tidak dapat dipalsukan oleh pihak pemohon jaminan.
    </string>
    <string name="track_and_trace">Track and Trace</string>
    <string name="certificate_authority">Certificate Authority (Sertifikat Elektronik)</string>
    <string name="e_gov">Government Solution</string>
    <string name="doc_man">Document Management</string>
    <string name="man_doc">Layanan Peruri dalam bidang pengelolaan dokumen berharga yang terintegrasi dan aman (secure) untuk menunjang keperluan sehari-hari.</string>
    <string name="a_digital_locker">a. Digital Locker</string>
    <string name="b_penjaminan_online">b. Penjaminan Online</string>
</resources>