<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background"
    tools:context=".produk.Trust">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:titleTextColor="@android:color/white"
        android:background="#00ACC1">
    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:text="@string/peruri_trust"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/certificate_authority"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/e_cert"
                android:layout_width="300dp"
                android:layout_height="200dp"/>
            <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:text="@string/sertifikat_elektronik"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/track_and_trace"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/track"
                android:layout_width="310dp"
                android:layout_height="200dp"/>
            <com.codesgood.views.JustifiedTextView
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:text="@string/track_trace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/e_gov"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/gov_sol"
                android:layout_width="310dp"
                android:layout_height="200dp"/>
            <com.codesgood.views.JustifiedTextView
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:text="@string/gov_solution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/doc_man"/>

            <com.codesgood.views.JustifiedTextView
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:text="@string/man_doc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/a_digital_locker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:src="@drawable/digilocker"
                android:layout_width="250dp"
                android:layout_height="160dp"/>
            <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/digilocker"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/b_penjaminan_online"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:src="@drawable/penjaminan_online"
                android:layout_width="250dp"
                android:layout_height="160dp"/>
            <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/penjaminan_online"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>